infra/k3s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findr-api
  namespace: findr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findr-api
  template:
    metadata:
      labels:
        app: findr-api
    spec:
      imagePullSecrets:
        - name: ghcr-pull
      containers:
        - name: api
          image: ghcr.io/denisbodurov05/findr-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
